k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: ghcr.io/mdmsft/hello-world:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: ghcr.io/mdmsft/hello-world:1.1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: blue
---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: green
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: blue.mdmsft.net
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: blue
            port:
              number: 80
  - host: green.mdmsft.net
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: green
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgw
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/backend-protocol: https
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: megatron
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/health-probe-path: /healthz
    appgw.ingress.kubernetes.io/health-probe-port: "443"
    appgw.ingress.kubernetes.io/health-probe-interval: "30"
    appgw.ingress.kubernetes.io/health-probe-timeout: "30"
    appgw.ingress.kubernetes.io/health-probe-hostname: "mdmsft.net"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-nginx-controller
            port: 
              number: 443
