rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world
spec:
  strategy:
    canary:
      canaryService: hello-world-canary
      stableService: hello-world-stable
      trafficRouting:
        nginx:
          stableIngress: nginx
      steps:
      - setWeight: 5
      - pause: {}
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: ghcr.io/mdmsft/hello-world:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
          limits:
            memory: 64Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-stable
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello-world
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-canary
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello-world
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-stable
            port:
              number: 80
